# book_API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 4f3363512f44_add_models_staff_staff_order.py  ad6d33995953_add_models_author_and_book.py
app/: main.py
app/api/v1/endpoints/: author.py  book.py  helper.py  order.py  swagger.py  todo.py
app/core/: config.py
app/db/: base.py
app/models/: models.py
app/schemas/: authors.py  books.py  orders.py  todo.py
app/services/: authors.py  books.py  orders.py  todo.py
app/settings/: settings.py
