[tool.poetry]
name = "book api"
version = "0.1.0"
description = ""
authors = ["Stepan Kuzin <stepankuzinmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.0.2"
SQLAlchemy= "1.4.27"
alembic = "^1.7.5"
pydantic = "^1.8.2"
psycopg2 = "^2.9.2"
flask-swagger-ui = "^3.36.0"
Flask-RESTful = "^0.3.9"
apispec = "^5.1.1"
apispec-webframeworks = "^0.5.2"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
rope = "^0.19.0"
flake8-isort = "^4.0.0"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
